--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section class="about">
         <div class="row">
             <div class="image">
-               <img src="../spartan fitness/images/wallpaperbetter.jpg">
+               <img src="../spartan fitness/images/wallpaperbetter.jpg" alt="me">
             </div>
        
         <div class="content">
